[package]
name = "globalcache"
version = "0.2.1"
edition = "2021"
description = "Cache utility that allows per-process managent of many cache instances"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sync = []
async = ["tokio"]
global = ["tokio", "tracing", "once_cell"]

[dependencies]
tokio = { version = "1.18.2", optional = true, features = ["sync", "rt", "time"] }
tracing = { version = "0.1.34", optional = true }
once_cell = { version = "1.10.0", optional = true }
async-trait = "0.1.53"
tuple = "*"
