[package]
name = "globalcache"
version = "0.3.0"
edition = "2021"
description = "Cache utility that allows per-process managent of many cache instances"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sync = []
async = ["tokio"]
global = ["tokio", "tracing", "once_cell"]

[dependencies]
tokio = { version = "1.41", optional = true, features = ["sync", "rt", "time"] }
tracing = { version = "0.1.40", optional = true }
once_cell = { version = "1.20", optional = true }
async-trait = "0.1.83"
tuple = "0.5.2"
web-time = "1.1.0"
rustc-hash = "2.0"
